# mcp-rag

./: README.md  main.py  pyproject.toml  rag.py  server.py  test.py
modules/loaders/: text_loader.py
modules/parsers/: web_base.py
modules/rewriters/: dummy_rewriter.py
