[project]
name = "mcp-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datapizza-ai>=0.0.9",
    "datapizza-ai-clients-google>=0.0.5",
    "datapizza-ai-embedders-google>=0.0.3",
    "datapizza-ai-parsers-docling>=0.0.8",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

# Ruff configuration
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
    "C4",  # flake8-comprehensions
]
